syntax = "proto3";

option csharp_namespace = "ProductionStructure.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/Timestamp.proto";
import "Common/common.proto";
import "Common/entities.proto";

service WorkSession{
	rpc CreateWorkSession (CreateWorkSessionRequest) returns (WorkSessionDTO);
	rpc GetWorkSession (GetRequest) returns (NullableWorkSessionDTO);
	rpc GetAllWorkSessions (google.protobuf.Empty) returns (WorkSessions);
	rpc UpdateWorkSession (WorkSessionDTO) returns (google.protobuf.Empty);
	rpc DeleteWorkSession (DeleteRequest) returns (google.protobuf.Empty);
}

message CreateWorkSessionRequest{
	google.protobuf.Timestamp initdate = 1;
}